# mp2-lab5-polinoms

./: CMakeLists.txt  README.md
listlib/: THeadList.h  TList.h  TNode.h
polinom/: TPolinom_Test.cpp
polinomlib/: TMonom.h  TPolinom.h
polinomtest/: CMakeLists.txt  TestPolinom.cpp
